--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "slim/slim": "^3.5",
         "slim/twig-view": "2.1",
         "symfony/mailer": "^5.4",
-        "respect/validation": "^2.2"
+        "respect/validation": "^2.2",
+        "slim/csrf": "^0.7.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^3.1"
